bridge/base/catalogservice2.api-deployment.yaml
#! catalogservice2.api-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: catalogservice2-api
    namespace: distributetmusicapp
    labels:
        com.docker.compose.project: distributetmusicapp
        com.docker.compose.service: catalogservice2.api
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: distributetmusicapp
            com.docker.compose.service: catalogservice2.api
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: distributetmusicapp
                com.docker.compose.service: catalogservice2.api
                com.docker.compose.network.backend: "true"
        spec:
            containers:
                - name: catalogservice2-api
                  image: catalogservice.api
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: catalogser-8080
                      containerPort: 8080
                    - name: catalogser-8081
                      containerPort: 8081
