bridge/base/apigateway.api-expose.yaml
#! apigateway.api-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: apigateway-api
    namespace: distributetmusicapp
    labels:
        com.docker.compose.project: distributetmusicapp
        com.docker.compose.service: apigateway.api
spec:
    selector:
        com.docker.compose.project: distributetmusicapp
        com.docker.compose.service: apigateway.api
    ports:
        - name: apigateway-8080
          port: 8080
          targetPort: apigateway-8080
        - name: apigateway-8081
          port: 8081
          targetPort: apigateway-8081
