bridge/base/catalogservice.api-expose.yaml
#! catalogservice.api-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: catalogservice-api
    namespace: distributetmusicapp
    labels:
        com.docker.compose.project: distributetmusicapp
        com.docker.compose.service: catalogservice.api
spec:
    selector:
        com.docker.compose.project: distributetmusicapp
        com.docker.compose.service: catalogservice.api
    ports:
        - name: catalogser-8080
          port: 8080
          targetPort: catalogser-8080
        - name: catalogser-8081
          port: 8081
          targetPort: catalogser-8081
