bridge/base/catalogservice2.api-expose.yaml
#! catalogservice2.api-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: catalogservice2-api
    namespace: distributetmusicapp
    labels:
        com.docker.compose.project: distributetmusicapp
        com.docker.compose.service: catalogservice2.api
spec:
    selector:
        com.docker.compose.project: distributetmusicapp
        com.docker.compose.service: catalogservice2.api
    ports:
        - name: catalogser-8080
          port: 8080
          targetPort: catalogser-8080
        - name: catalogser-8081
          port: 8081
          targetPort: catalogser-8081
